# MarineSTD-GS

./: .gitignore  LICENSE  README.md  pyproject.toml  render_modes.md  run_marinestd_batch.sh
marinestd_gs/: marinestd_config.py  marinestd_datamanager.py  marinestd_dataparser.py  marinestd_model.py  marinestd_render.py  underwater_dataset.py  utils.py
